manifests/22-redmine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: redmine-on-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
        - name: redmine
          image: redmine:6
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: redmine-files
              mountPath: /usr/src/redmine/files
      volumes:
        - name: redmine-files
          persistentVolumeClaim:
            claimName: redmine-files
