manifests/11-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: redmine-on-kubernetes
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
