manifests/21-redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: redmine-on-kubernetes
spec:
  selector:
    app: redmine
  ports:
    - name: http
      port: 3000
      targetPort: 3000
