manifests/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine
  namespace: redmine-on-kubernetes
spec:
  ingressClassName: traefik
  rules:
    - host: redmine.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redmine
                port:
                  number: 3000
